--- a/partials/_single-article.twig
+++ b/partials/_single-article.twig
@@ -67,10 +67,10 @@
 
 {% set imgSizes = {
     "mobile"  : imageSizes is defined and imageSizes.mobile is defined  ? imageSizes.mobile  : {width:306, height:185},
+    "mobileLrg" : imageSizes is defined and imageSizes.mobileLarge is defined  ? imageSizes.mobileLarge  : {width:306, height:185},
     "tablet"  : imageSizes is defined and imageSizes.tablet is defined  ? imageSizes.tablet  : {width:500, height:768},
     "desktop" : imageSizes is defined and imageSizes.desktop is defined ? imageSizes.desktop : {width:imgWidth, height:imgHeight},
 } %}
-
 
 {% set displayMedia = ((article.hasMedia or article.hasPreviewMedia) and imageSuppress != true) ? true : false %}
 
@@ -146,10 +146,10 @@
     {% endif %}
 
     {% set imageSource = imageSource == 'article' ? article.featuredMedia : article.createdBy['media'] %}
-    {% set imageSmall     = _Media.getMediaUrl(imageSource,imgSizes.mobile.width, imgSizes.mobile.height,  imageparams ) %}
-    {% set imageMedium    = _Media.getMediaUrl(imageSource,imgSizes.tablet.width, imgSizes.tablet.height,  imageparams ) %}
-    {% set imageLarge     = _Media.getMediaUrl(imageSource,imgSizes.desktop.width,imgSizes.desktop.height, imageparams ) %}
-
+    {% set imageSmall       = _Media.getMediaUrl(imageSource,imgSizes.mobile.width, imgSizes.mobile.height,         imageparams ) %}
+    {% set imageMobileLarge = _Media.getMediaUrl(imageSource,imgSizes.mobileLrg.width, imgSizes.mobileLrg.height,   imageparams ) %}
+    {% set imageMedium      = _Media.getMediaUrl(imageSource,imgSizes.tablet.width, imgSizes.tablet.height,         imageparams ) %}
+    {% set imageLarge       = _Media.getMediaUrl(imageSource,imgSizes.desktop.width,imgSizes.desktop.height,        imageparams ) %}
 
 
     {% set newWindow = false %}
@@ -183,6 +183,7 @@
         imgWidth        : imgWidth,
         image           : imageLarge,
         imageMedium     : imageMedium,
+        imageMobileLarge: imageMobileLarge,
         imageSmall      : imageSmall,
         publishDate     : publishDate,
         videoClass      : videoClass,
