--- a/partials/_article-main.twig
+++ b/partials/_article-main.twig
@@ -8,7 +8,7 @@
 {% if params.hasMedia %}
     <figure class="{{params.cardType}}c-cards-view__media {{params.videoClass}}" title="{{imageSize}}">
         <picture>
-            <source media="(max-width: 767px) and (min-width: 501px)" srcset="{{params.imageMedium}}">
+            <source media="(max-width: 767px) and (min-width: 501px)" srcset="{{params.imageMobileLarge}}">
             <source media="(max-width: 991px) and (min-width: 768px)" srcset="{{params.imageMedium}}">
             <source media="(max-width: 500px)" srcset="{{params.imageSmall}}">
 
