--- a/partials/_section-loadmore.twig
+++ b/partials/_section-loadmore.twig
@@ -120,6 +120,6 @@
             lightbox        : "{{contentType}}"
         };
 
-        Acme.articleFeeds["loadmore_section_{{sectionNumber}}"] = new Acme.View.articleFeed(params);
+        Acme.articleFeeds["loadmore_section_{{sectionNumber}}"] = new Acme.ArticleFeed(params);
     });
 </script>
