--- a/static/sass/_elements.all.scss
+++ b/static/sass/_elements.all.scss
@@ -151,7 +151,7 @@ a {
   font-size: 100%;
   vertical-align: baseline;
   background: transparent;
-
+  text-decoration: none;
   &:hover {
     text-decoration: none;
   }
